MET-6588 Add edm external validation support